--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>spaceBase</title>
+    <meta name="keywords" content="{{meta_keywords}}" />
+    <meta name="description" content="{{meta_description}}" />
+    <link rel="shortcut icon" href="/favicon.ico">
+    
+    <!-- Sharing Metadata -->
+    <meta property="og:site_name" content="spaceBase" />
+    <meta property="og:url" content="{{share_url}}" />
+    <meta property="og:title" content="{{share_title}}" />
+    <meta property="og:description" content="{{meta_description}}" />
+    <meta property="og:image" content="{{share_image}}" />
+    <meta name="twitter:card" content="spaceBase" />
 
     <!--[if (gt IE 8) | (IEMobile)]><!-->
     <link href="stylesheets/application.css" media="all" rel="stylesheet" type="text/css" />
@@ -16,19 +27,22 @@
     <!--[if (lt IE 9) & (!IEMobile)]>
     <link href="stylesheets/application-ie.css" media="all" rel="stylesheet" type="text/css" />
     <![endif]-->
-
-    <link rel="stylesheet" href="stylesheets/styleguide.css" type="text/css">
+    
+    <script src="javascripts/vendor/modernizr-2.8.3.js"></script>
 </head>
 <body>
   <div class="site-wrapper">
-    <div class="">
+    <section class="hero">
       <h1>spaceBase</h1>
+      <h2>A Sass-based Responsive CSS Framework</h2>
+      <p>v 1.0</p>
+      <a class="btn" href="">Download</a>
       <p><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
-    </div>
-    <div class="">
-      <h2>Content</h2>
+      <p>A <a href="http://space150.com" target="_blank">space150</a> mission</p>
+    </section>
+    <section class="intro">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
+    </section>
   </div>
 </body>
 </html>
