--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>spaceBase</title>
-    <meta name="keywords" content="{{meta_keywords}}" />
-    <meta name="description" content="{{meta_description}}" />
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <link rel="shortcut icon" href="/favicon.ico">
     
     <!-- Sharing Metadata -->
     <meta property="og:site_name" content="spaceBase" />
-    <meta property="og:url" content="{{share_url}}" />
-    <meta property="og:title" content="{{share_title}}" />
-    <meta property="og:description" content="{{meta_description}}" />
-    <meta property="og:image" content="{{share_image}}" />
+    <meta property="og:url" content="" />
+    <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="/images/" />
     <meta name="twitter:card" content="spaceBase" />
 
     <!--[if (gt IE 8) | (IEMobile)]><!-->
@@ -36,12 +36,62 @@
       <h1>spaceBase</h1>
       <h2>A Sass-based Responsive CSS Framework</h2>
       <p>v 1.0</p>
-      <a class="btn" href="">Download</a>
+      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
       <p><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
       <p>A <a href="http://space150.com" target="_blank">space150</a> mission</p>
     </section>
     <section class="intro">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </section>
+    <section class="">
+      <h2>What is it for?</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </section>
+    <section class="features">
+      <h2>Key Features</h2>
+      <ul>
+        <li></li>
+      </ul>
+    </section>
+    <section class="features">
+      <h3>More Features</h3>
+      <ul>
+        <li></li>
+      </ul>
+    </section>
+    <section class="launch">
+      <h2>Launch Sequence</h2>
+      <ol>
+        <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+    </section>
+    <section class="customize">
+      <h2>Customize</h2>
+      <ul>
+        <li></li>
+      </ul>
+    </section>
+    <section class="created">
+      <h2>Created with spaceBase</h2>
+    </section>
+    <section class="credits">
+      <h2>Credits</h2>
+      <ul>
+        <li><a href="http://" target="_blank"></a></li>
+      </ul>
+    </section>
+    <section class="download">
+      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
+    </section>
+    <section class="contribute">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </section>
+    <section class="footer">
+      <p>&copy;2015 space150</p>
     </section>
   </div>
 </body>
