add more html structure

--- a/index.html
+++ b/index.html
@@ -44,45 +44,72 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
     <section class="">
-      <h2>What is it for?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="">
+        <h2>What is it for?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="">
+        <img src="" alt="" />
+      </div>
     </section>
     <section class="features">
       <h2>Key Features</h2>
-      <ul>
-        <li></li>
+      <ul class="grid-wrapper">
+        <li class="grid"></li>
       </ul>
     </section>
     <section class="features">
       <h3>More Features</h3>
-      <ul>
+      <ul class="h-list">
         <li></li>
       </ul>
     </section>
     <section class="launch">
-      <h2>Launch Sequence</h2>
-      <ol>
-        <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
+      <div class="">
+        <h2>Launch Sequence</h2>
+        <img src="" alt="" />
+      </div>
+      <div class="">
+        <ol>
+          <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ol>
+      </div>
     </section>
     <section class="customize">
       <h2>Customize</h2>
-      <ul>
+      <ul class="v-list">
         <li></li>
       </ul>
     </section>
     <section class="created">
       <h2>Created with spaceBase</h2>
+      <ul class="grid-wrapper">
+        <li class="grid">
+          <a href="" target="_blank"><img src="" alt="" /></a>
+        </li>
+      </ul>
     </section>
     <section class="credits">
-      <h2>Credits</h2>
-      <ul>
-        <li><a href="http://" target="_blank"></a></li>
-      </ul>
+      <div class="">
+        <h2>Mission Control</h2>
+        <p><a href="http://space150.com" target="_blank">space150</a></p>
+        <div class="figure"><img src="" alt="" /></div>
+      </div>
+      <div class="">
+        <h2>Credits</h2>
+        <ul class="v-list">
+          <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css (v4)</a></li>
+          <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
+          <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
+          <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
+          <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer’s CSS Reset</a></li>
+          <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
+        </ul>
+      </div>
     </section>
     <section class="download">
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
