add github buttons

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta charset="UTF-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>spaceBase</title>
-    <meta name="keywords" content="" />
+    <title>spaceBase: a space150 product</title>
+    <meta name="keywords" content="space150" />
     <meta name="description" content="" />
     <link rel="shortcut icon" href="/favicon.ico">
     
@@ -33,12 +33,13 @@
 <body>
   <div class="site-wrapper">
     <section class="hero">
+      <div class="figure"><img src="" alt="" /></div>
       <h1>spaceBase</h1>
       <h2>A Sass-based Responsive CSS Framework</h2>
       <p>v 1.0</p>
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
       <p><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
-      <p>A <a href="http://space150.com" target="_blank">space150</a> mission</p>
+      <p>A <a href="http://space150.com" target="_blank">space150</a> product</p>
     </section>
     <section class="intro">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -118,6 +119,11 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </section>
     <section class="footer">
+      <ul class="h-list social">
+        <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
+        <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
+        <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
+      </div>
       <p>&copy;2015 space150</p>
     </section>
   </div>
