--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="hero">
       <div class="figure"><img src="" alt="" /></div>
       <h1>spaceBase</h1>
-      <h2>A Sass-based Responsive CSS Framework</h2>
+      <p>A Sass-based Responsive CSS Framework</p>
       <p>v 1.0</p>
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
       <p><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
@@ -116,13 +116,13 @@
     </section>
     <section class="contribute">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </section>
-    <section class="footer">
       <ul class="h-list social">
         <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
         <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
         <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
-      </div>
+      </ul>
+    </section>
+    <section class="footer">
       <p>&copy;2015 space150</p>
     </section>
   </div>
