layout structure, more styling'

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<!--[if (lt IE 7) & (!IEMobile)]>     <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if (IE 7) & (!IEMobile)]>        <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if (IE 8) & (!IEMobile)]>        <html class="no-js lt-ie9"> <![endif]-->
-<!--[if (IE 9) & (!IEMobile)]>        <html class="no-js lt-ie10"> <![endif]-->
-<!--[if (gt IE 9) | (IEMobile) | !(IE)]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if (lt IE 7) & (!IEMobile)]>     <html class="lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if (IE 7) & (!IEMobile)]>        <html class="lt-ie9 lt-ie8"> <![endif]-->
+<!--[if (IE 8) & (!IEMobile)]>        <html class="lt-ie9"> <![endif]-->
+<!--[if (IE 9) & (!IEMobile)]>        <html class="lt-ie10"> <![endif]-->
+<!--[if (gt IE 9) | (IEMobile) | !(IE)]><!--> <html> <!--<![endif]-->
 <head>
     <meta charset="UTF-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
@@ -11,13 +11,13 @@
     <title>spaceBase: a space150 product</title>
     <meta name="keywords" content="space150" />
     <meta name="description" content="" />
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
     
     <meta property="og:site_name" content="spaceBase" />
     <meta property="og:url" content="" />
     <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="/images/" />
+    <meta property="og:image" content="images/" />
     <meta name="twitter:card" content="spaceBase" />
 
     <!--[if (gt IE 8) | (IEMobile)]><!-->
@@ -32,44 +32,55 @@
 <body>
   <div class="site-wrapper">
     <section class="hero">
-      <div class="figure"><img src="" alt="" /></div>
-      <h1>spaceBase</h1>
-      <p>A Sass-based Responsive CSS Framework</p>
-      <p>v 1.0</p>
-      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
-      <p><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
-      <p>A <a href="http://space150.com" target="_blank">space150</a> product</p>
+      <div class="figure"><img src="images/hero.png" alt="spaceman" /></div>
+      <div class="content">
+        <h1>spaceBase</h1>
+        <p class="subhead">A Sass-based Responsive CSS Framework</p>
+        <p>v 1.0</p>
+        <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
+        <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank"><span class="visuallyhidden">GitHub</span></a></p>
+        <p class="shoutout">A <a href="http://space150.com" target="_blank">space150</a> product</p>
+      </div>
     </section>
     <section class="intro">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="container narrow">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
     </section>
-    <section class="">
-      <div class="">
+    <section class="what">
+      <div class="one-half">
         <h2>What is it for?</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="">
-        <img src="" alt="" />
+      <div class="one-half">
+        <img src="images/browser.png" alt="code" />
       </div>
     </section>
     <section class="features">
-      <h2>Key Features</h2>
-      <ul class="grid-wrapper">
-        <li class="grid"></li>
-      </ul>
+      <div class="container">
+        <h2>Key Features</h2>
+        <ul class="grid-wrapper">
+          <li class="grid one-quarter"><span class="h3">Lorem ipsum dolor</span></li>
+          <li class="grid one-quarter"><span class="h3">dolor sit amet</span></li>
+          <li class="grid one-quarter"><span class="h3">consectetur adipisicing</span></li>
+          <li class="grid one-quarter"><span class="h3">sed do eiusmod tempor</span></li>
+        </ul>
+      </div>
     </section>
     <section class="features">
-      <h3>More Features</h3>
-      <ul class="h-list">
-        <li></li>
-      </ul>
+      <div class="container narrow">
+        <h3>More Features</h3>
+        <ul class="h-list">
+          <li></li>
+        </ul>
+      </div>
     </section>
     <section class="launch">
-      <div class="">
+      <div class="one-half">
         <h2>Launch Sequence</h2>
-        <img src="" alt="" />
+        <img src="images/ship.png" alt="spaceship" />
       </div>
-      <div class="">
+      <div class="one-half">
         <ol>
           <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
           <li></li>
@@ -80,29 +91,43 @@
       </div>
     </section>
     <section class="customize">
-      <h2>Customize</h2>
-      <ul class="v-list">
-        <li></li>
-      </ul>
+      <div class="container narrow">
+        <h2>Customize</h2>
+        <ul class="v-list">
+          <li></li>
+        </ul>
+      </div>
     </section>
     <section class="created">
-      <h2>Created with spaceBase</h2>
-      <ul class="grid-wrapper">
-        <li class="grid">
-          <a href="" target="_blank"><img src="" alt="" /></a>
-        </li>
-      </ul>
+      <div class="container">
+        <h2>Created with spaceBase</h2>
+        <ul class="grid-wrapper">
+          <li class="grid one-third">
+            <a href="http://space150.com" target="_blank"><img src="" alt="space150" />space150.com</a>
+          </li>
+          <li class="grid one-third">
+            <a href="http://pearsonscandy.com" target="_blank"><img src="" alt="Pearson's Candy" />pearsonscandy.com</a>
+          </li>
+          <li class="grid one-third">
+            <a href="http://pentiar.com" target="_blank"><img src="" alt="Pentair" />pentiar.com</a>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="credits">
-      <div class="">
-        <h2>Mission Control</h2>
-        <p><a href="http://space150.com" target="_blank">space150</a></p>
-        <div class="figure"><img src="" alt="" /></div>
+      <div class="one-half">
+        <div class="figure"><img src="images/crew.jpg" alt="space150 front-end crew" /></div>
+        <div class="content">
+          <div class="v-centered">
+            <h2>Mission Control</h2>
+            <p><a href="http://space150.com" target="_blank">space150</a></p>
+          </div>
+        </div>
       </div>
-      <div class="">
+      <div class="one-half">
         <h2>Credits</h2>
         <ul class="v-list">
-          <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css (v4)</a></li>
+          <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css</a></li>
           <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
           <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
           <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
@@ -115,7 +140,7 @@
       <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
     </section>
     <section class="contribute">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet consectetur. <br />Tempor incididunt ut labore et dolore magna aliqua.</p>
       <ul class="h-list social">
         <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
         <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
@@ -123,6 +148,7 @@
       </ul>
     </section>
     <section class="footer">
+      <img src="images/helmet.png" alt="spaceman" />
       <p>&copy;2015 space150</p>
     </section>
   </div>
