--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:url" content="" />
     <meta property="og:title" content="spaceBase: A Sass-based Responsive CSS Framework" />
     <meta property="og:description" content="" />
-    <meta property="og:image" content="images/" />
+    <meta property="og:image" content="images/helmet.png" />
     <meta name="twitter:card" content="spaceBase" />
 
     <!--[if (gt IE 8) | (IEMobile)]><!-->
