--- a/index.html
+++ b/index.html
@@ -30,135 +30,135 @@
     <script src="javascripts/vendor/modernizr-2.8.3.js"></script>
 </head>
 <body>
-  <div class="site-wrapper">
-    <section class="hero">
+  <section class="hero">
+    <div class="site-wrapper">
       <div class="figure"><img src="images/hero.png" alt="spaceman" /></div>
-      <div class="content-over-image">
-        <h1 class="logo">spaceBase</h1>
-        <p class="subhead">A Sass-based Responsive CSS Framework</p>
-        <p>v 1.0</p>
-        <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
-        <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
-        <p class="shoutout">A <a href="http://space150.com" target="_blank">space150</a> product</p>
+    </div>
+    <div class="content-over-image">
+      <h1 class="logo">spaceBase</h1>
+      <p class="subhead">A Sass-based Responsive CSS Framework</p>
+      <p>v 1.0</p>
+      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download</a><p>
+      <p class="github"><a href="https://github.com/space150/spaceBase" target="_blank">GitHub</a></p>
+      <p class="shoutout">A <a href="http://space150.com" target="_blank">space150</a> product</p>
+    </div>
+  </section>
+  <section class="intro padding">
+    <div class="container narrow">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+  </section>
+  <section class="what">
+    <div class="grid-wrapper">
+      <div class="grid one-half padding">
+        <h2 class="h2">What is it?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-    </section>
-    <section class="intro">
-      <div class="container narrow">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="grid one-half padding">
+        <img src="images/browser.png" alt="code" />
       </div>
-    </section>
-    <section class="what">
-      <div class="grid-wrapper">
-        <div class="grid one-half">
-          <h2 class="h2">What is it for?</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <div class="grid one-half">
-          <img src="images/browser.png" alt="code" />
-        </div>
+    </div>
+  </section>
+  <section class="key padding">
+    <div class="container">
+      <h2 class="h2">Key Features</h2>
+      <ul class="grid-wrapper">
+        <li class="grid one-quarter"><span class="h3">Lorem ipsum dolor</span></li>
+        <li class="grid one-quarter"><span class="h3">dolor sit amet</span></li>
+        <li class="grid one-quarter"><span class="h3">consectetur adipisicing</span></li>
+        <li class="grid one-quarter"><span class="h3">sed do eiusmod tempor</span></li>
+      </ul>
+    </div>
+  </section>
+  <section class="features padding">
+    <div class="container narrow">
+      <h3 class="h3">More Features</h3>
+      <ul class="h-list">
+        <li></li>
+      </ul>
+    </div>
+  </section>
+  <section class="launch">
+    <div class="grid-wrapper">
+      <div class="grid one-half">
+        <h2 class="h2">Launch Sequence</h2>
+        <img src="images/ship.png" alt="spaceship" />
       </div>
-    </section>
-    <section class="key">
-      <div class="container">
-        <h2 class="h2">Key Features</h2>
-        <ul class="grid-wrapper">
-          <li class="grid one-quarter"><span class="h3">Lorem ipsum dolor</span></li>
-          <li class="grid one-quarter"><span class="h3">dolor sit amet</span></li>
-          <li class="grid one-quarter"><span class="h3">consectetur adipisicing</span></li>
-          <li class="grid one-quarter"><span class="h3">sed do eiusmod tempor</span></li>
-        </ul>
-      </div>
-    </section>
-    <section class="features">
-      <div class="container narrow">
-        <h3 class="h3">More Features</h3>
-        <ul class="h-list">
+      <div class="grid one-half padding">
+        <ol>
+          <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
           <li></li>
-        </ul>
-      </div>
-    </section>
-    <section class="launch">
-      <div class="grid-wrapper">
-        <div class="grid one-half">
-          <h2 class="h2">Launch Sequence</h2>
-          <img src="images/ship.png" alt="spaceship" />
-        </div>
-        <div class="grid one-half">
-          <ol>
-            <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-          </ol>
-        </div>
-      </div>
-    </section>
-    <section class="customize">
-      <div class="container narrow">
-        <h2 class="h2">Customize</h2>
-        <ul class="v-list">
           <li></li>
-        </ul>
+          <li></li>
+          <li></li>
+        </ol>
       </div>
-    </section>
-    <section class="created">
-      <div class="container">
-        <h2 class="h2">Created with spaceBase</h2>
-        <ul class="grid-wrapper">
-          <li class="grid one-third">
-            <a href="http://space150.com" target="_blank"><img src="" alt="space150" />space150.com</a>
-          </li>
-          <li class="grid one-third">
-            <a href="http://pearsonscandy.com" target="_blank"><img src="" alt="Pearson's Candy" />pearsonscandy.com</a>
-          </li>
-          <li class="grid one-third">
-            <a href="http://pentiar.com" target="_blank"><img src="" alt="Pentair" />pentiar.com</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="credits">
-      <div class="grid-wrapper">
-        <div class="grid one-half">
-          <div class="figure"><img src="images/crew.jpg" alt="space150 front-end crew" /></div>
-          <div class="content-over-image">
-            <div class="table">
-              <div class="v-centered">
-                <h2 class="h2">Mission Control</h2>
-                <p><a href="http://space150.com" target="_blank">space150</a></p>
-              </div>
+    </div>
+  </section>
+  <section class="customize padding">
+    <div class="container narrow">
+      <h2 class="h2">Customize</h2>
+      <ul class="v-list">
+        <li></li>
+      </ul>
+    </div>
+  </section>
+  <section class="created padding">
+    <div class="container">
+      <h2 class="h2">Created with spaceBase</h2>
+      <ul class="grid-wrapper">
+        <li class="grid one-third">
+          <a href="http://space150.com" target="_blank"><img src="" alt="space150" />space150.com</a>
+        </li>
+        <li class="grid one-third">
+          <a href="http://pearsonscandy.com" target="_blank"><img src="" alt="Pearson's Candy" />pearsonscandy.com</a>
+        </li>
+        <li class="grid one-third">
+          <a href="http://pentiar.com" target="_blank"><img src="" alt="Pentair" />pentiar.com</a>
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="credits">
+    <div class="grid-wrapper">
+      <div class="grid one-half">
+        <div class="figure"><img src="images/crew.jpg" alt="space150 front-end crew" /></div>
+        <div class="content-over-image">
+          <div class="table">
+            <div class="v-centered">
+              <h2 class="h2">Mission Control</h2>
+              <p><a href="http://space150.com" target="_blank">space150</a></p>
             </div>
           </div>
         </div>
-        <div class="grid one-half">
-          <h2 class="h2">Credits</h2>
-          <ul class="v-list">
-            <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css</a></li>
-            <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
-            <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
-            <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
-            <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer’s CSS Reset</a></li>
-            <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
-          </ul>
-        </div>
       </div>
-    </section>
-    <section class="download">
-      <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
-    </section>
-    <section class="contribute">
-      <p>Lorem ipsum dolor sit amet consectetur. <br />Tempor incididunt ut labore et dolore magna aliqua.</p>
-      <ul class="h-list h-list--centered">
-        <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
-        <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
-        <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
-      </ul>
-    </section>
-    <section class="footer">
-      <img src="images/helmet.png" alt="spaceman" />
-      <p>&copy;2015 space150</p>
-    </section>
-  </div>
+      <div class="grid one-half padding">
+        <h2 class="h2">Credits</h2>
+        <ul class="v-list">
+          <li><a href="https://github.com/csswizardry/inuit.css" target="_blank">Harry Robert’s Inuit.css</a></li>
+          <li><a href="http://getbootstrap.com" target="_blank">Bootstrap</a></li>
+          <li><a href="http://html5boilerplate.com" target="_blank">HTML5 Boilerplate</a></li>
+          <li><a href="http://necolas.github.io/normalize.css" target="_blank">Normalize.css</a></li>
+          <li><a href="http://meyerweb.com/eric/tools/css/reset" target="_blank">Eric Meyer’s CSS Reset</a></li>
+          <li><a href="http://www.amazon.com/Golden-Girls-Season-4/dp/B000C1VBAA" target="_blank">The Golden Girls - Season 4</a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section class="download">
+    <p><a class="btn" href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download spaceBase</a><p>
+  </section>
+  <section class="contribute">
+    <p>Lorem ipsum dolor sit amet consectetur. <br />Tempor incididunt ut labore et dolore magna aliqua.</p>
+    <ul class="h-list h-list--centered">
+      <li><a href="https://twitter.com/share" class="twitter-share-button" data-count="none" data-via="space150">Tweet</a><script type="text/javascript" src="//platform.twitter.com/widgets.js"></script></li>
+      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
+      <li><iframe src="http://ghbtns.com/github-btn.html?user=space150&repo=spaceBase&type=fork&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="100" height="20"></iframe></li>
+    </ul>
+  </section>
+  <section class="footer">
+    <img src="images/helmet.png" alt="spaceman" />
+    <p>&copy;2015 space150</p>
+  </section>
 </body>
 </html>
