--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="grid one-half">
           <div class="right padding">
-            <ol>
+            <ol class="numbers">
               <li><a href="https://github.com/space150/spaceBase/archive/v1.0.zip">Download the ZIP</a></li>
               <li>Lorem ipsum dolor</li>
               <li>dolor sit amet</li>
